--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -99,7 +99,7 @@ a:hover{
 	/*background-color: rgba(200,0,0,0.8);*/
 	width:70%;
 	margin: auto;
-	padding: 1%;
+	margin-top: 65px;
 	z-index: +20;
 }
 
