--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -195,16 +195,12 @@ a:hover{
 }
 
 
-#slider_images{
-
-
-
-}
-#slider_images_tag{
+.slider_images_tag{
 	font-family:Bitter-Regular;
 	color:#000;
 
 }
+
 #overview{
 	/*box-shadow:2px 2px 5px 2px #5D4037 outset; */
 	-webkit-box-shadow: 3px 3px 15px 0px rgba(51,39,13,1);
